refactor: renaming package to stats, create boilerplates for both observations and species
