# backend/docs/swagger.json
@@ -239,7 +239,53 @@
                 }
             }
         },
-        "/statistics/species": {
+        "/stats/observations": {
+            "get": {
+                "description": "Observation overview",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "statistics"
+                ],
+                "summary": "Observation overview",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/stats.ObservationOverviewResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/stats/observations/timeseries": {
+            "get": {
+                "description": "Observation time series",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "statistics"
+                ],
+                "summary": "Observation time series",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/stats.ObservationTimeSeriesResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/stats/species": {
             "get": {
                 "description": "Species overview",
                 "consumes": [
@@ -256,7 +302,30 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/statistics.SpeciesOverviewResponse"
+                            "$ref": "#/definitions/stats.SpeciesOverviewResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/stats/species/timeseries": {
+            "get": {
+                "description": "Species time series",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "statistics"
+                ],
+                "summary": "Species time series",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/stats.SpeciesTimeSeriesResponse"
                         }
                     }
                 }
@@ -457,7 +526,16 @@
                 }
             }
         },
-        "statistics.SpeciesOverviewResponse": {
+        "stats.ObservationOverviewResponse": {
+            "type": "object"
+        },
+        "stats.ObservationTimeSeriesResponse": {
+            "type": "object"
+        },
+        "stats.SpeciesOverviewResponse": {
+            "type": "object"
+        },
+        "stats.SpeciesTimeSeriesResponse": {
             "type": "object"
         }
     },
